--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.1",
     "gulp-px2rem-plugin": "^0.4.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "http-proxy-middleware": "^0.20.0"
   }
 }
